--- a/utility/FromObsidian.ipynb
+++ b/utility/FromObsidian.ipynb
@@ -70,17 +70,17 @@
     "    #f = re.sub(r\"!\\[\\[(.*?)\\|(.*?)\\]\\]\", r\"!([\\1](\\1 \\\"\\2\\\"))\", f)\n",
     "\n",
     "\n",
-    "    text = re.sub(r\"!\\[\\[(.*?)\\|(.*?)\\]\\]\", r'![\\1](docs/images/\\1 \"\\2\")', text)\n",
+    "    text = re.sub(r\"!\\[\\[(.*?)\\|(.*?)\\]\\]\", r'![\\1](images/\\1 \"\\2\")', text)\n",
     "\n",
     "    # replace ![[abc]] with !(abc)[abc] while changing name (replace spaces with underscores, prepend path)\n",
-    "    text = re.sub(r\"!\\[\\[(.*?)\\]\\]\", r\"![\\1](docs/images/\\1)\", text)\n",
+    "    text = re.sub(r\"!\\[\\[(.*?)\\]\\]\", r\"![\\1](images/\\1)\", text)\n",
     "\n",
     "\n",
     "    # insert newlines after images\n",
     "    text = re.sub(r\"!\\[.*?\\]\\(.*?\\)\", r\"\\g<0>\\n\", text)\n",
     "\n",
     "    # write to new file\n",
-    "    target_file = f\"/Users/peter/Projects/Music/SOMATerra/pitchgrid/src/routes/docs/{file}\"\n",
+    "    target_file = f\"/Users/peter/Projects/Music/SOMATerra/pitchgrid/static/docs/{file}\"\n",
     "    with open(target_file, \"w\") as f:\n",
     "        f.write(text)\n",
     "\n",
