moved docs to info

--- a/utility/FromObsidian.ipynb
+++ b/utility/FromObsidian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +70,10 @@
     "    #f = re.sub(r\"!\\[\\[(.*?)\\|(.*?)\\]\\]\", r\"!([\\1](\\1 \\\"\\2\\\"))\", f)\n",
     "\n",
     "\n",
-    "    text = re.sub(r\"!\\[\\[(.*?)\\|(.*?)\\]\\]\", r'![\\1](images/\\1 \"\\2\")', text)\n",
+    "    text = re.sub(r\"!\\[\\[(.*?)\\|(.*?)\\]\\]\", r'![\\1](/docs/images/\\1 \"\\2\")', text)\n",
     "\n",
     "    # replace ![[abc]] with !(abc)[abc] while changing name (replace spaces with underscores, prepend path)\n",
-    "    text = re.sub(r\"!\\[\\[(.*?)\\]\\]\", r\"![\\1](images/\\1)\", text)\n",
+    "    text = re.sub(r\"!\\[\\[(.*?)\\]\\]\", r\"![\\1](/docs/images/\\1)\", text)\n",
     "\n",
     "\n",
     "    # insert newlines after images\n",
