add pitchgrid info

--- a/utility/FromObsidian.ipynb
+++ b/utility/FromObsidian.ipynb
@@ -2,33 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying Screenshot 2024-10-04 at 21.44.34.png\n",
-      "Copying Screenshot 2024-10-04 at 21.46.32.png\n",
-      "Copying IMG_4098 2.jpg\n",
-      "Copying Screenshot 2024-10-01 at 13.28.37.png\n",
-      "Copying Screenshot 2024-10-01 at 10.58.23.png\n",
-      "Copying Screenshot 2024-10-04 at 22.06.45.png\n",
-      "Copying Screenshot 2024-10-04 at 22.05.47.png\n",
-      "Copying Screenshot 2024-10-01 at 13.09.10.png\n",
-      "Copying Screenshot 2024-10-01 at 13.15.22.png\n",
-      "Copying Screenshot 2024-10-01 at 13.24.22.png\n",
-      "Copying Screenshot 2024-10-01 at 13.32.08.png\n",
-      "Copying Screenshot 2024-10-01 at 14.01.07.png\n",
-      "Copying Screenshot 2024-10-01 at 14.13.36.png\n",
-      "Copying Screenshot 2024-10-01 at 14.33.10.png\n",
-      "Copying Screenshot 2024-10-04 at 23.47.57.png\n",
-      "Copying Screenshot 2024-10-04 at 22.45.37.png\n",
-      "Copying Screenshot 2024-10-04 at 22.45.52.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import re\n",
@@ -83,14 +59,46 @@
     "    target_file = f\"/Users/peter/Projects/Music/SOMATerra/pitchgrid/static/docs/{file}\"\n",
     "    with open(target_file, \"w\") as f:\n",
     "        f.write(text)\n",
-    "\n",
-    "\n",
-    "\n",
-    "copyFromObsidian(\"/Users/peter/Documents/ObsidianVault/Music/PitchGrid VCV/PitchGrid MicroExquis.md\")\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "copyFromObsidian(\"/Users/peter/Documents/ObsidianVault/Music/PitchGrid VCV/PitchGrid MicroExquis.md\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying Screenshot 2024-08-20 at 16.42.51.png\n",
+      "Copying Traditional_indonesian_instruments04.jpg\n",
+      "Copying Screenshot 2024-08-20 at 17.08.49.png\n",
+      "Copying Screenshot 2024-08-20 at 17.17.10.png\n",
+      "Copying Screenshot 2024-08-08 at 20.19.39.png\n",
+      "Copying Screenshot 2024-08-08 at 20.20.33.png\n",
+      "Copying Screenshot 2024-08-08 at 20.52.36.png\n",
+      "Copying Screenshot 2024-08-20 at 22.09.59.png\n",
+      "Copying Screenshot 2024-08-20 at 22.16.56.png\n",
+      "Copying Screenshot 2024-08-20 at 22.28.24.png\n",
+      "Copying Screenshot 2024-08-20 at 22.37.58.png\n",
+      "Copying Screenshot 2024-08-15 at 17.11.19.png\n",
+      "Copying Screenshot 2024-08-15 at 21.58.52.png\n",
+      "Copying Screenshot 2024-08-15 at 17.09.17.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "copyFromObsidian(\"/Users/peter/Documents/ObsidianVault/Music/The PitchGrid - Doing Microtonality with Structure.md\")\n"
    ]
   },
   {
